# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini  tasks.py  tyoaikakirjanpito.md
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaaviot.txt  sekvenssikaaviot.txt
src/: build.py  db_connection.py  event_handler.py  gameloop.py  index.py  initialize_database.py  initialize_db.py  level.py  renderer.py  score.py  scorerepository.py  shape.py
src/game_logic/: level.py  shape.py
src/gameloop/: gameloop.py  renderer.py
src/repositories/: scorerepository.py
src/sprites/: background.py  block.py  floor.py  top.py  wall.py
src/tests/: gameloop_test.py  level_test.py  score_repository_test.py  shape_test.py
src/ui/: event_handler.py  game_over_view.py  game_view.py  high_score_view.py  start_view.py
